--- a/style.css
+++ b/style.css
@@ -210,3 +210,210 @@ body{
   .storySummary h2{
     color: #A60C0C;
   }
+
+  .storySummary p{
+    margin-left: 2px;
+    margin-right: 5px;
+    margin-top: -5px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    body{
+        background-color: #2C2C2C;
+        
+    }
+    
+    .topBar {
+        height: 100px;
+        background-color: #161616;
+        display: flex;
+        flex-direction: row;
+        color: #F2FAEF;
+        font-family: Inter;
+        font-size: 70px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        text-align: right;
+        align-items: center;
+    }
+
+    .topBarImg{
+        width: 80px;
+        height: 80px;
+        border-radius: 50px;
+        background: lightgray 50% / cover no-repeat;
+        /* border:  1px solid #F2FAEF; */
+        margin-left: 1100px;
+        margin-right: 840px;
+        display: flex;
+    }
+    
+    .topBarImg img {
+        width: 80px;
+        height: auto;
+        border-radius: 50px;
+        border:  1px solid #F2FAEF;
+    }
+
+    .nameInfo {
+        height: 80px;
+        background-color: #1A2A6C;
+        display: flex;
+        flex: row;
+        font-family: Inter;
+        color: #F2FAEF;
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+
+
+        
+    }
+    
+    .name{
+        margin-left: 1000px;
+        margin-right: -1000px;
+        margin-top: 5px;
+
+        /* height: 100%; */
+    }
+    
+    .infoBtn{
+        display: flex;
+        border: none;
+        cursor: pointer;
+        background-color:#1A2A6C ;
+        color: #A60C0C;
+        align-items: center;
+        justify-content:center;
+        font-size: 50px;    
+        margin-left: 1920px;
+    }
+
+    .chat-input {
+        height: 100px;
+        background-color: #161616;
+        display: flex;
+        flex-direction: row;
+        flex-shrink: 0;
+        /* position: absolute; */
+    
+    }
+
+    #user-input {
+        flex-grow: 1;
+        border: none;
+        height: 70%;
+        border-radius: 30px;
+        width: 20%;
+        /* margin-left: 4px; */
+        
+        font-family: Inter;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        margin: 13px;
+        margin-right: 4px;
+        padding-left: 20px;
+    
+    }
+
+    .chatContainer {
+        flex-grow: 1; /* This will make it take the remaining space */
+        background-color: #2C2C2C;
+        overflow: hidden;
+        overflow-y: auto;
+        padding-bottom: 2vh;
+        z-index: 0;
+        
+        
+    }
+
+    .chatContainer p{
+        color: #F2FAEF;
+        font-family: Inter;
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        margin: 10px;
+        
+    }
+    .message.bot p{
+        color: #b0b0b0;
+        align-self: flex-start;
+        margin-left: 200px;
+        margin-right: 200px;
+        text-align: left;
+    }
+    
+    
+    .message.user p{
+        color: #7e7ee5; 
+        align-self: flex-end; 
+        margin-left: 600px;
+        margin-right: 200px;
+        text-align: right;
+    } 
+    
+    #sendButton {
+        display: flex;
+        border: none;
+        cursor: pointer;
+        background-color: #161616;
+        color: #1A2A6C;
+        align-items: center;
+        /* justify-content: 'center'; */
+        font-size: 110px;
+    
+    
+    }
+
+    #typing-indicator{
+        color: #b0b0b0;
+        align-self: flex-start;
+        margin-left: 200px;
+        margin-right: 200px;
+        text-align: left;
+        font-size: 50px;
+    }
+
+    .storySummary{
+        display: none;
+        position: absolute;
+        background: #393939;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 999;
+        width: 1200px;
+        align-items: center;
+        justify-content: center;
+        height: 50vh;
+        margin-top: 20vh;
+        margin-right: 500px;
+        right: 20px;
+        border-radius: 10px;
+        border: 1px solid rgb(42, 42, 42);
+        flex-direction: column;
+        color:#F2FAEF;
+        font-family: Inter;
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;  
+        padding-left: 20px;
+      }
+    
+      .storySummary h2{
+        color: #A60C0C;
+      }
+
+      .storySummary p{
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top: -5px;
+      }
+    
+}
