--- a/styling.css
+++ b/styling.css
@@ -66,3 +66,23 @@ body{
     cursor: pointer;
 }
 
+@media screen and (min-width: 1024px) {
+    .compName{
+        height: 50px;
+        font-size: 100px;
+    }
+    .story{
+        font-size: 60px;
+        margin-top: 80px;
+        margin-left: 40px;
+        margin-right: 40px;
+        /* height: 60px; */
+    }
+
+    .btn{
+        margin-top: -500px;
+        width: 250px;
+        height: 120px;
+        font-size:30px;
+    }
+}
