--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+
+
+@font-face {
+    font-family: 'Naruto';  /* You can name it whatever you want */
+    src: url('/assets/njnaruto.ttf') format('truetype');  /* Replace with the path to your font file */
+}
 body, html {
     height: 100%;
     margin: 0;
@@ -65,8 +71,9 @@ body{
 }
 
 .name{
-    margin-left: 10px;
-    margin-top: 5px;
+    font-family: 'Naruto';
+    /* margin-left: 10px;
+    margin-top: 5px; */
     /* height: 100%; */
 }
 
@@ -193,7 +200,6 @@ body{
     justify-content: center;
     height: 50vh;
     margin-top: 20vh;
-    right: 20px;
     border-radius: 10px;
     border: 1px solid rgb(42, 42, 42);
     flex-direction: column;
@@ -203,6 +209,7 @@ body{
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    overflow-y: auto;
     margin-right: 4px;
     padding-left: 20px;
   }
@@ -217,81 +224,71 @@ body{
     margin-top: -5px;
   }
 
-  @media screen and (min-width: 1024px) {
+  @media screen and (hover: hover) {
     body{
         background-color: #2C2C2C;
         
     }
     
     .topBar {
-        height: 100px;
+        height: 120px;
         background-color: #161616;
         display: flex;
-        flex-direction: row;
+        align-items: center;
+        justify-content: space-between; /* Distributes children with space between them */
         color: #F2FAEF;
         font-family: Inter;
         font-size: 70px;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
-        text-align: right;
-        align-items: center;
+        padding: 0 20px; /* Some padding on the sides to prevent content sticking to the edge */
     }
-
-    .topBarImg{
+    
+    .topBarImg {
         width: 80px;
         height: 80px;
         border-radius: 50px;
         background: lightgray 50% / cover no-repeat;
-        /* border:  1px solid #F2FAEF; */
-        margin-left: 1100px;
-        margin-right: 840px;
+        margin-right: 20px; /* Adjust the margin as needed */
         display: flex;
+        align-items: center;
+        justify-content: center;
     }
     
     .topBarImg img {
         width: 80px;
         height: auto;
         border-radius: 50px;
-        border:  1px solid #F2FAEF;
+        border: 1px solid #F2FAEF;
     }
-
+    
     .nameInfo {
         height: 80px;
         background-color: #1A2A6C;
         display: flex;
-        flex: row;
+        align-items: center;
         font-family: Inter;
         color: #F2FAEF;
         font-size: 40px;
         font-style: normal;
         font-weight: 300;
         line-height: normal;
-
-
-        
+        padding: 0 20px; /* Some padding on the sides */
     }
     
-    .name{
-        margin-left: 1000px;
-        margin-right: -1000px;
-        margin-top: 5px;
-
-        /* height: 100%; */
-    }
-    
-    .infoBtn{
+    .infoBtn {
         display: flex;
         border: none;
         cursor: pointer;
-        background-color:#1A2A6C ;
+        background-color: #1A2A6C;
         color: #A60C0C;
         align-items: center;
-        justify-content:center;
-        font-size: 50px;    
-        margin-left: 1920px;
+        justify-content: center;
+        font-size: 50px;
+        margin-left: auto; /* Push the button to the right */
+        padding: 0 20px; /* Some padding to give it width */
     }
-
     .chat-input {
         height: 100px;
         background-color: #161616;
@@ -381,39 +378,45 @@ body{
         font-size: 50px;
     }
 
-    .storySummary{
+
+    .storySummary {
         display: none;
         position: absolute;
         background: #393939;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 999;
-        width: 1200px;
+        max-width: 1200px;
+        width: 80%;
         align-items: center;
         justify-content: center;
         height: 50vh;
-        margin-top: 20vh;
-        margin-right: 500px;
-        right: 20px;
+        top: 30%; 
+        left: 50%; 
+        transform: translateX(-50%) translateY(-50%); 
         border-radius: 10px;
         border: 1px solid rgb(42, 42, 42);
         flex-direction: column;
-        color:#F2FAEF;
+        color: #F2FAEF;
         font-family: Inter;
         font-size: 40px;
         font-style: normal;
         font-weight: 400;
-        line-height: normal;  
-        padding-left: 20px;
-      }
-    
-      .storySummary h2{
-        color: #A60C0C;
-      }
+        line-height: normal;
+        /* padding-left: 20px; */
+        box-sizing: border-box;
+    }
+.storySummary h2 {
+    color: #A60C0C;
+    margin-bottom: 10px; /* Add some space after the heading to separate it from the paragraph */
+    font-size: 50px;
+}
 
-      .storySummary p{
-        margin-left: 20px;
-        margin-right: 20px;
-        margin-top: -5px;
-      }
+.storySummary p {
+    margin: 20px 20px; /* 10px top and bottom margin, 20px left and right margin */
+    text-align: justify; /* This will justify the text, giving it a more uniform appearance */
+    line-height: 1.5; /* Improve readability with increased line-height */
+    font-size: 25px;
+    /* padding: 5%; */
+}
     
 }
