--- a/styling.css
+++ b/styling.css
@@ -12,7 +12,7 @@ body{
     flex-direction: column;
     /* align-items: center; */
     /* justify-content: center; */
-    overflow: hidden;
+    overflow: auto;
     position: relative;
     background-color: #1C1C1C;
     background-image: url("assets/akatsuki.jpeg");
@@ -37,7 +37,7 @@ body{
     flex-grow: 1;
     color: #FFF;
     font-family: 'Inclusive Sans', sans-serif;
-    font-size: 30px;
+    font-size: 20px;
     font-style: normal;
     font-weight:300;
     line-height: normal;
